--- a/src/app/product/product-add.component.html
+++ b/src/app/product/product-add.component.html
@@ -1,6 +1,6 @@
 <form>
     <div class="form-group"> 
-        <label for="form-group">Product Name</label>
+        <label for="form-group">Add Product</label>
         <input ngModel name="product_name" #productName ="ngModel" (change)= "log(productName)"
             id="product_name" type="text" class="form-control">
 
@@ -9,5 +9,5 @@
         <label for="description">Description</label>
         <textarea ngModel name="description" id="description" cols="30" rows="10" class="form-control"></textarea>
     </div>
-    <button class="btn btn-primary">Submit</button>
+    <button class="btn btn-primary" (click)="onClickme()">Submit</button>
 </form>
